[package]
name = "rust-linux-worker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
uuid = { version = "0.4", features = ["v4"]}
log = "0.4"
env_logger = "0.9.0"
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.17"

[build-dependencies]
tonic-build = "0.5"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"